# lst-rewards-indexer

./: .gitignore  Anchor.toml  OPERATOR_PLAYBOOK.md  README.md  drop-all-tables.sql  package-lock.json  package.json  schema.sql  tsconfig.json
.cargo/: config.toml
db/: merkle-schema.sql  schema.sql
deploy/: nginx-rewards-api.conf  rewards-api.service
programs/merkle-distributor/: Cargo.toml  README.md  Xargo.toml
programs/merkle-distributor/src/: lib.rs
src/: db.ts
src/api/: index.ts
src/api/middleware/: error-handler.ts  rate-limit.ts
src/api/queries/: ignored-wallets.ts  index.ts  leaderboard.ts  stats.ts  wallet.ts  window-payouts.ts
src/api/routes/: health.ts  leaderboard.ts  stats.ts  wallet.ts  window-payouts.ts
src/config/: tokens.ts
src/indexers/: snapshot.ts
src/jobs/: build-merkle-distribution.ts  classify-wallets.ts  compute-reward-payouts.ts  create-reward.ts  export-reward-csv.ts  init-merkle-distribution.ts  materialize-weights.ts  normalize-reward-shares.ts  run-merkle-relayer.ts  squads-create-payout-proposals.ts  test-merkle-devnet.ts
src/merkle/: builder.ts  index.ts  relayer.ts  tree.test.ts  tree.ts  types.ts
src/runners/: api-server.ts  process-pipeline.ts  scheduler.ts  snapshot-runner.ts  test-snapshot-flow.ts
src/utils/: rpc.ts  test-rpc-failover.ts
